[gd_scene load_steps=2 format=3 uid="uid://c03or1xubrofr"]

[ext_resource type="Script" uid="uid://bmsnns8pnwb6k" path="res://Scripts/UI/PauseScreenUI.gd" id="1_nn0hl"]

[node name="PauseScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nn0hl")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PauseLabel" type="Label" parent="PanelContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "GAME PAUSED"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResumeButton" type="Button" parent="PanelContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "RESUME"

[node name="CharacterSelectButton" type="Button" parent="PanelContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "CHARACTER SELECT"

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "QUIT"
